--- a/ansible/roles/makinastates_lxc_create/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/main.yml
@@ -18,6 +18,42 @@
     lxc_eth1_bridge: "{{makinastates_lxc_vars.msg['lxc_eth1_bridge']}}"
     lxc_eth1_ip: "{{makinastates_lxc_vars.msg['lxc_eth1_ip']}}"
     lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
+    lxc_eth2_mac: "{{makinastates_lxc_vars.msg['lxc_eth2_mac']}}"
+    lxc_eth2_bridge: "{{makinastates_lxc_vars.msg['lxc_eth2_bridge']}}"
+    lxc_eth2_ip: "{{makinastates_lxc_vars.msg['lxc_eth2_ip']}}"
+    lxc_eth2_gateway: "{{makinastates_lxc_vars.msg['lxc_eth2_gateway']}}"
+    lxc_eth3_mac: "{{makinastates_lxc_vars.msg['lxc_eth3_mac']}}"
+    lxc_eth3_bridge: "{{makinastates_lxc_vars.msg['lxc_eth3_bridge']}}"
+    lxc_eth3_ip: "{{makinastates_lxc_vars.msg['lxc_eth3_ip']}}"
+    lxc_eth3_gateway: "{{makinastates_lxc_vars.msg['lxc_eth3_gateway']}}"
+    lxc_eth4_mac: "{{makinastates_lxc_vars.msg['lxc_eth4_mac']}}"
+    lxc_eth4_bridge: "{{makinastates_lxc_vars.msg['lxc_eth4_bridge']}}"
+    lxc_eth4_ip: "{{makinastates_lxc_vars.msg['lxc_eth4_ip']}}"
+    lxc_eth4_gateway: "{{makinastates_lxc_vars.msg['lxc_eth4_gateway']}}"
+    lxc_eth5_mac: "{{makinastates_lxc_vars.msg['lxc_eth5_mac']}}"
+    lxc_eth5_bridge: "{{makinastates_lxc_vars.msg['lxc_eth5_bridge']}}"
+    lxc_eth5_ip: "{{makinastates_lxc_vars.msg['lxc_eth5_ip']}}"
+    lxc_eth5_gateway: "{{makinastates_lxc_vars.msg['lxc_eth5_gateway']}}"
+    lxc_eth6_mac: "{{makinastates_lxc_vars.msg['lxc_eth6_mac']}}"
+    lxc_eth6_bridge: "{{makinastates_lxc_vars.msg['lxc_eth6_bridge']}}"
+    lxc_eth6_ip: "{{makinastates_lxc_vars.msg['lxc_eth6_ip']}}"
+    lxc_eth6_gateway: "{{makinastates_lxc_vars.msg['lxc_eth6_gateway']}}"
+    lxc_eth7_mac: "{{makinastates_lxc_vars.msg['lxc_eth7_mac']}}"
+    lxc_eth7_bridge: "{{makinastates_lxc_vars.msg['lxc_eth7_bridge']}}"
+    lxc_eth7_ip: "{{makinastates_lxc_vars.msg['lxc_eth7_ip']}}"
+    lxc_eth7_gateway: "{{makinastates_lxc_vars.msg['lxc_eth7_gateway']}}"
+    lxc_eth8_mac: "{{makinastates_lxc_vars.msg['lxc_eth8_mac']}}"
+    lxc_eth8_bridge: "{{makinastates_lxc_vars.msg['lxc_eth8_bridge']}}"
+    lxc_eth8_ip: "{{makinastates_lxc_vars.msg['lxc_eth8_ip']}}"
+    lxc_eth8_gateway: "{{makinastates_lxc_vars.msg['lxc_eth8_gateway']}}"
+    lxc_eth9_mac: "{{makinastates_lxc_vars.msg['lxc_eth9_mac']}}"
+    lxc_eth9_bridge: "{{makinastates_lxc_vars.msg['lxc_eth9_bridge']}}"
+    lxc_eth9_ip: "{{makinastates_lxc_vars.msg['lxc_eth9_ip']}}"
+    lxc_eth9_gateway: "{{makinastates_lxc_vars.msg['lxc_eth9_gateway']}}"
+    lxc_eth1_mac: "{{makinastates_lxc_vars.msg['lxc_eth1_mac']}}"
+    lxc_eth1_bridge: "{{makinastates_lxc_vars.msg['lxc_eth1_bridge']}}"
+    lxc_eth1_ip: "{{makinastates_lxc_vars.msg['lxc_eth1_ip']}}"
+    lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
     lxc_os_mirror: "{{makinastates_lxc_vars.msg['lxc_os_mirror']}}"
     lxc_os_release: "{{makinastates_lxc_vars.msg['lxc_os_release']}}"
     lxc_auto_start: "{{makinastates_lxc_vars.msg['lxc_auto_start']}}"
