--- a/files/etc/systemd/system/ms_iptables.service
+++ b/files/etc/systemd/system/ms_iptables.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=ms iptables
-Before=network.target
+After=network.target
 Before=libvirtd.service
 Before=NetworkManager.service
 Before=lxc-net-makina.service
