--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -6,19 +6,70 @@ include {{data.vhost_top_file}};
 {% for h in data.server_aliases %}
 server {
     listen {{ data.port }};
-{% if data.get('ssl_cert', '') %}
-#    listen {{ data.ssl_port }};
-{% endif %}
     {% if data.v6 %}
     listen [::]:{{data.port}} {% if data.default_server%}default_server {%endif%}ipv6only=on;
     {% endif %}
     server_name {{ h }};
 
+    error_log {{data.data.logdir}}/redirect{{ h }}-error.log {{data.loglevel}};
+    access_log  {{data.data.logdir}}/redirect{{ h }}-access.log {{data.data.logformat}};
+
     # feed the map variables for ssl up
+    {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
+    {% for addr in data.reverse_proxy_addresses %}
+    set_real_ip_from {{addr}};
+    {% endfor %}
+    real_ip_header {{data.real_ip_header}};
+    {% endif %}
+
     set $http_x_ssl $http_x_ssl_resolved;
+
     rewrite ^(.*)$ http://{{data.server_name}}$1 permanent;
-    #rewrite ^\/?(.*) http://{{data.server_name}}$request_uri permanent;
 }
+
+
+{% if data.get('ssl_cert', '') %}
+server {
+    ssl_ciphers {{data.ssl_ciphers}};
+    ssl_session_cache  {{data.ssl_session_cache}};
+    ssl_session_timeout {{data.ssl_session_timeout}};
+    ssl_protocols       {{data.ssl_protocols}};
+    ssl_prefer_server_ciphers on;
+    ssl_dhparam /etc/ssl/certs/nginxdhparam.pem;
+{% if data.get('ssl_bundle', '') %}
+    ssl_certificate {{data.ssl_bundle_path}};
+{% elif data.get('ssl_cert', '') %}
+    ssl_certificate {{data.ssl_cert_path}};
+{% endif %}
+{% if data.get('ssl_key', '') %}
+    ssl_certificate_key {{data.ssl_key_path}};
+{% endif %}
+    ssl on;
+    listen {{ data.ssl_port }} ssl;
+    {% if data.v6 %}
+    listen [::]:{{data.ssl_port}} ipv6only=on ssl;
+    {% endif %}
+
+    server_name {{ h }};
+
+    error_log {{data.data.logdir}}/ssl_redirect{{ h }}-error.log {{data.loglevel}};
+    access_log  {{data.data.logdir}}/ssl_redirect{{ h }}-access.log {{data.data.logformat}};
+
+    # feed the map variables for ssl up
+    {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
+    {% for addr in data.reverse_proxy_addresses %}
+    set_real_ip_from {{addr}};
+    {% endfor %}
+    real_ip_header {{data.real_ip_header}};
+    {% endif %}
+
+    set $http_x_ssl $http_x_ssl_resolved;
+
+    rewrite ^(.*)$ https://{{data.server_name}}$1 permanent;
+}
+{% endif%}
+
+
 {% endfor %}
 {% endif %}
 server {
