Nginx: add donotlog_options_requests options in pillar to enable/disable OPTIONS requests log

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -150,6 +150,14 @@ http {
     # Virtual Host Configs
     ##
 
+    # Define type of requests going to logs (to remove OPTIONS requests for example)
+    map $request_method $method_loggable {
+        {% if data.get('donotlog_options_requests', False) %}
+        OPTIONS 0;
+        {% endif %}
+        default 1;
+    }
+
     # SSL offload support (use_scheme is the proxified scheme)
     # if X-SSL header is set, we are behind a ssl gateway
     # so the scheme is either from the request or
