--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -30,7 +30,7 @@ server {
 
     server_name_in_redirect on;
     error_log {{data.data.logdir}}/{{ data.small_name }}-error.log {{data.loglevel}};
-    access_log  {{data.data.logdir}}/{{ data.small_name }}-access.log {{data.data.logformat}};
+    access_log  {{data.data.logdir}}/{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
@@ -80,7 +80,7 @@ server {
 
     server_name_in_redirect on;
     error_log {{data.data.logdir}}/ssl_{{ data.small_name }}-error.log {{data.loglevel}};
-    access_log  {{data.data.logdir}}/ssl_{{ data.small_name }}-access.log {{data.data.logformat}};
+    access_log  {{data.data.logdir}}/ssl_{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
