icinga2 refresh pillar part

--- a/etc/makina-states/database.sls.in
+++ b/etc/makina-states/database.sls.in
@@ -779,7 +779,8 @@ backup_configurations:
 # configure an icinga cluster
 # supervision_configurations:
 #   supervision:
-#     ui: icinga.foo.net
+#     ui: icinga.foo.net #ui = icingaweb, ui2 = icingaweb2
+#     ui2: icinga.foo.net
 #     pnp: icinga.foo.net
 #     master: icinga.foo.net
 #     nagvis: icinga.foo.net
@@ -799,6 +800,47 @@ backup_configurations:
 #         domain: pnp.foo.net
 #         pnp4nagios:
 #           htpasswd_file: ldap://ldap.foo.net/dc=mcjam,dc=org?uid?sub?(objectClass=person)
+#     ui2_conf:
+#       roles:
+#         admins:
+#           users: 'icingaadmin,employeeA'
+#           groups: 'sysadmin-grp'
+#         readonly:
+#           groups: 'ldapreaders,foo-employees,foo-interns'
+#       authentication_settings:
+#         ldap_a:
+#           base_dn: 'ou=People,dc=foo,dc=com'
+#       groups:
+#         ldap_g:
+#           base_dn: 'ou=Group,dc=foo,dc=com'
+#       resources:
+#         ldap:
+#           enabled: true
+#           hostname: 'ldap.foo/com',
+#           port: '389'
+#           root_dn: 'dc=foo,dc=com'
+#           bind_dn: 'uid=icingaweb2,ou=People,dc=foo,dc=com'
+#           bind_pw: 'xxxx'
+#           user_class: 'inetOrgPerson'
+#           user_name_attribute: 'uid'
+#       create_pgsql: true
+#       nginx:
+#         domain: icinga-web2.foo.com
+#         icinga_web:
+#       databases:
+#         web:
+#           host: '10.5.0.1'
+#           port: '5432'
+#           name: 'icinga_web2'
+#           user: 'icinga_web2'
+#           password: 'x'
+#         ido2db:
+#           host: '10.5.0.1'
+#           port: '5432'
+#           user: 'icinga'
+#           password: 'x'
+#           name: 'icinga'
+#           prefix: 'icinga_'
 #     ui_conf:
 #       ldap_auth:
 #         url: ldap://ldap.foo.net
