--- a/ansible/roles/makinastates_lxc_create/templates/lxc.conf
+++ b/ansible/roles/makinastates_lxc_create/templates/lxc.conf
@@ -80,3 +80,6 @@ lxc.network.flags = up
 {{(lxc_eth9_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth9_mac), '#')}}
 {{(lxc_eth9_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth9_ip), '#')}}
 {{((lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge) and lxc_eth9_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth9_gateway), '#')}}
+
+# include any extra, and non managed configuration
+lxc.include = {{lxc_path}}/{{lxc_container_name}}/manual_lxc.conf
