--- a/ansible/roles/makinastates_lxc_create/tasks/lxc.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/lxc.yml
@@ -33,6 +33,20 @@
     dest: "{{lxc_path}}/{{lxc_container_name}}/reset-host.py"
     mode: 755
   tags: makinastates_lxc_create,makinastates_lxc_create_scripts
+- name: lxc manual_lxc_conf init test
+  stat:
+    path: "{{lxc_path}}/{{lxc_container_name}}/manual_lxc_conf"
+  register: lxc_manual_lxc_conf_test
+  tags: makinastates_lxc_create,makinastates_lxc_create_manual_lxc_conf
+- name: lxc manual_lxc_conf init
+  template:
+    src: '../templates/{{item}}'
+    dest: "{{lxc_path}}/{{lxc_container_name}}/{{item}}"
+    mode: 644
+  with_items:
+    - manual_lxc.conf
+  when: not lxc_manual_lxc_conf_test.stat.exists
+  tags: makinastates_lxc_create,makinastates_lxc_create_manual_lxc_conf
 - name: lxc fstab init test
   stat:
     path: "{{lxc_path}}/{{lxc_container_name}}/fstab"
