Fix PidFile ref in redis systemd override, @kiorky: on a fresh install this was needed, but we may have to dig a little more on that.

--- a/files/etc/systemd/system/redis-server.service.d/redis-server.conf
+++ b/files/etc/systemd/system/redis-server.service.d/redis-server.conf
@@ -2,7 +2,7 @@
 #ExecStartPre=/bin/mkdir -p /var/run/redis
 #ExecStartPre=/bin/chown -R redis:redis /var/run/redis
 #ExecReload=/bin/kill -USR2 $MAINPID
-#PIDFile=/var/run/redis/redis.pid
+PIDFile=/var/run/redis/redis-server.pid
 
 ExecStart=
 ExecStart=/usr/bin/redis-server-wrapper.sh /etc/redis/redis.conf
