--- a/files/etc/dhcp/dhcpd.conf
+++ b/files/etc/dhcp/dhcpd.conf
@@ -5,7 +5,7 @@
 # configuration file instead of this file.
 #
 #
-{% set data=salt['mc_utils.json_load'](data) %}
+{% set data=salt['mc_dhcpd.settings']() %}
 {% set conf=data.conf %}
 
 # The ddns-updates-style parameter controls whether or not the server will
