--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -152,7 +152,7 @@ http {
 
     # Define type of requests going to logs (to remove OPTIONS requests for example)
     map $request_method $method_loggable {
-        {% if data.get('donotlog_options_requests', False) %}
+        {% if data.get('donotlog_options_requests', True) %}
         OPTIONS 0;
         {% endif %}
         default 1;
