ms_services_base_ntp role

--- a/ansible/roles/ms_services_base_ntp/templates/etc/ntp.conf
+++ b/ansible/roles/ms_services_base_ntp/templates/etc/ntp.conf
@@ -1,9 +1,4 @@
-{% set data = {} %}
-{% for i, val in vars.items() %}
-{% if i.startswith('ms_ntp_') %}
-{% set _= data.update({i.replace('ms_ntp_', ''): val}) %}
-{% endif %}
-{% endfor %}
+{% set data = ms_services_base_ntp_vars %}
 {% set var_lib = '/var/lib' %} 
 # /etc/ntp.conf, configuration for ntpd; see ntp.conf(5) for help
 # CAUTION ------------------- MANAGED VIA ANSIBLE
