--- a/ansible/roles/ms_localsettings_apparmor/tasks/main.yml
+++ b/ansible/roles/ms_localsettings_apparmor/tasks/main.yml
@@ -1,55 +1,9 @@
 ---
-## ##
-- name: apparmor_ntp_patch
+- name: "ms_localsettings_apparmor preflight check - SKIPTEST"
+  debug:
+    msg: '{{True}}'
+  register: ms_localsettings_apparmor_can_run
   tags: ms_localsettings_apparmor
-  shell: |
-         set -e
-         test -e /etc/apparmor.d/usr.sbin.ntpd
-         if grep -q attach_disconnected /etc/apparmor.d/usr.sbin.ntpd;then
-           exit 1
-         fi
-  register: apparmor_ntp_patch
-  ignore_errors: yes
-- name: apparmor_ntp_patch-transfer
+- include: run.yml
+  when: '{{ ms_localsettings_apparmor_can_run.msg == True }}'
   tags: ms_localsettings_apparmor
-  copy:
-    src: "templates/usr.sbin.ntpd.patch"
-    dest: /tmp/apparmor.patch
-  when: "apparmor_ntp_patch.rc==0"
-- name: apparmor_ntp_patch-apply
-  tags: ms_localsettings_apparmor
-  shell: |
-         set -e
-         patch --dry-run -r- -Np2 < /tmp/apparmor.patch
-         patch           -r- -Np2 < /tmp/apparmor.patch
-  args:
-    chdir : /
-  when: "apparmor_ntp_patch.rc==0"
-
-## ##
-- name: apparmor_ntp_patch2
-  tags: ms_localsettings_apparmor
-  shell: |
-        set -e
-        test -e /etc/apparmor.d/usr.sbin.ntpd
-        if egrep -q '/\*\*/libopts\*.so\* r,' /etc/apparmor.d/usr.sbin.ntpd;then
-          exit 1
-        fi
-  register: apparmor_ntp_patch2
-  ignore_errors: yes
-- name: apparmor_ntp_patch-transfer2
-  tags: ms_localsettings_apparmor
-  copy:
-    src: "templates/usr.sbin.ntpd.perms.patch"
-    dest: /tmp/apparmor.patch
-  when: "apparmor_ntp_patch2.rc==0"
-- name: apparmor_ntp_patch-apply
-  tags: ms_localsettings_apparmor
-  shell: |
-         set -e
-         patch --dry-run -r- -Np2 < /tmp/apparmor.patch
-         patch           -r- -Np2 < /tmp/apparmor.patch
-  args:
-    chdir : /
-  when: "apparmor_ntp_patch2.rc==0"
-
