fix base ms pkgs

--- a/ansible/roles/makinastates_prereqs/tasks/main.yml
+++ b/ansible/roles/makinastates_prereqs/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: install prerequisites
   apt: name={{item}} update_cache=yes
   with_items:
+    - ca-certificates
     - python
     - python-chardet
     - python3-chardet
