add ansible to logrotate

--- a/files/etc/logrotate.d/salt.conf
+++ b/files/etc/logrotate.d/salt.conf
@@ -5,6 +5,7 @@
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-minion
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-master-key
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-minion-key
+{{salt_data['ansible_log_prefix']}}/*.log
 {{salt_data['log_prefix']}}/*.log {
   daily
   copytruncate
