Adapt php packaging to new ondrej/php ppa

--- a/files/etc/logrotate.d/fpmpool.conf
+++ b/files/etc/logrotate.d/fpmpool.conf
@@ -8,7 +8,8 @@
   compress
   notifempty
   sharedscript
-  postrotate if [ -f /var/run/php5-fpm.pid ];then kill -USR1 /var/run/php5-fpm.pid;fi
+  postrotate
+    for pidfile in `find /var/run/php*-fpm.pid /run/php/php*.pid -type f 2>/dev/null`;do if [ -f $pidfile ];then kill -USR1 `cat $pidfile`;fi;done
   endscript
   su root {{group}}
 }
