Nginx: less files; less includes; more variables on status pages

--- a/files/etc/nginx/microcache_fcgi.conf
+++ b/files/etc/nginx/microcache_fcgi.conf
@@ -6,7 +6,7 @@
 ## The cache zone referenced.
 fastcgi_cache microcache;
 ## The cache key.
-fastcgi_cache_key $host$request_uri;
+fastcgi_cache_key $host$request_method$request_uri$query_string;
 
 ## For 200 and 301 make the cache valid for 5 second.
 fastcgi_cache_valid 200 301 5s;
@@ -22,8 +22,14 @@ fastcgi_cache_use_stale error timeout invalid_header updating http_500;
 ## The Cache-Control and Expires headers should be delivered untouched
 ## from the upstream to the client.
 fastcgi_ignore_headers Cache-Control Expires;
+
+# do not interfere with Cookie headers
+fastcgi_pass_header Set-Cookie;
+fastcgi_pass_header Cookie;
+
 ## If we have a cookie we should bypass the cache. The same if we have a
-## no cache variable set (POST request, etc, see map_cache.conf)
+## no cache variable set (POST requests, etc.)
+## include map_cache.conf in your vhost for this to work
 fastcgi_cache_bypass $no_cache1;
 fastcgi_no_cache $no_cache1;
 fastcgi_cache_bypass $no_cache2;
