--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -10,8 +10,8 @@ daemon off;
 # (Max clients = worker_connections * worker_processes)
 # "Max clients" is also limited by the number of socket connections available on the system (~64k)
 pid /var/run/nginx.pid;
+# FIXME: packaged modules?
 include /etc/nginx/modules-enabled/*.conf;
-
 
 events {
     use epoll;
@@ -21,8 +21,11 @@ events {
 
 http {
     # Caches information about open FDs, freqently accessed files.
-    # # Changing this setting, in my environment, brought performance up from 560k req/sec, to 904k req/sec.
-    # # I recommend using some varient of these options, though not the specific values listed below.
+    # Note that this hides IO checks for 'file exists' things, for example
+    # so if you use a file marker for maintenance this cache duration
+    # will do two things:
+    # - remove a lot (really) of IO checks for trigger file existence
+    # - delay any behavior based on this file existence depending on the cache duration
     open_file_cache {{data.open_file_cache}};
     open_file_cache_valid {{data.open_file_cache_valid}};
     open_file_cache_min_uses {{data.open_file_cache_min_uses}};
@@ -98,6 +101,7 @@ http {
     # gzip_disable "msie6";
     {% endif %}
 
+    # FIXME: why are gzip settings commented?
     # gzip_vary on;
     # gzip_proxied any;
     # gzip_comp_level 6;
@@ -106,12 +110,10 @@ http {
     # gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Microcache zone definition for FastCGI.
-    include {{data.basedir}}/fastcgi_microcache_zone.conf;
+    fastcgi_cache_path /var/cache/nginx_microcache levels=1:2 keys_zone=microcache:5M max_size=1G inactive=1h loader_threshold=2592000000 loader_sleep=1 loader_files=100000;
 
     # status allowed hosts
-    include {{data.basedir}}/drupal_cron_allowed_hosts.conf;
     include {{data.basedir}}/status_allowed_hosts.conf;
-    include {{data.basedir}}/php_fpm_status_allowed_hosts.conf;
 
     # ldap cache
     {% if data.get('ldap_cache', True) %}
@@ -120,9 +122,8 @@ http {
     auth_ldap_cache_size 1000;
     {% endif %}
 
-
     proxy_headers_hash_max_size  {{data.proxy_headers_hash_max_size}};
-    proxy_headers_hash_bucket_size {{data.proxy_headers_hash_bucket_size}}; 
+    proxy_headers_hash_bucket_size {{data.proxy_headers_hash_bucket_size}};
 
     ##
     # nginx-passenger config
