--- a/files/etc/nginx/php_fpm_status_vhost.conf
+++ b/files/etc/nginx/php_fpm_status_vhost.conf
@@ -1,15 +1,9 @@
 # -*- mode: nginx; mode: flyspell-prog; ispell-current-dictionary: american -*-
+# MANAGED VIA SALT --  DO NOT EDIT
+{% set data=salt['mc_nginx.settings']() %}
 
-### The configuration for the status pages of php-fpm. As described in
-### http://www.php.net/manual/en/install.fpm.configuration.php.
-
-### php-fpm provides a status and a heartbeat page that is served through the web server.
-### Here's an example configuration for them.
-
-## The status page is at /fpm-status. Only local access is
-## allowed. Non authorized access returns a 404 through the error_page
-## directive.
-location = /fpmstatus {
+# php-fpm monitoring status page
+location = {{ data.fpm_statuspath }} {
     auth_basic off;
     if ($dont_show_fpm_status) {
         return 404;
@@ -20,7 +14,7 @@ location = /fpmstatus {
 
 ## The ping page is at /ping and returns the string configured at the php-fpm level.
 ## Also only local network connections (loopback and LAN) are permitted.
-location = /ping {
+location = {{ data.fpm_ping }} {
     auth_basic off;
     if ($dont_show_fpm_status) {
         return 404;
