--- a/files/etc/nginx/status_allowed_hosts.conf
+++ b/files/etc/nginx/status_allowed_hosts.conf
@@ -1,7 +1,21 @@
 # -*- mode: nginx; mode: flyspell-prog;  ispell-local-dictionary: "american" -*-
+# MANAGED VIA SALT --  DO NOT EDIT
+{% set data=salt['mc_nginx.settings']() %}
 geo $dont_show_nginx_status {
     default 1;
-    127.0.0.1 0; # allow on the loopback
-    192.168.0.0/16 0; # allow lan
-    10.0.0.0/8 0; # allow lan
+    {% for allowed_host in data.status_allowed_ip %}
+    {{allowed_host}} 0;
+    {% endfor %}
+}
+geo $dont_show_fpm_status {
+    default 1;
+    {% for allowed_host in data.status_allowed_ip %}
+    {{allowed_host}} 0;
+    {% endfor %}
+}
+geo $not_allowed_cron {
+    default 1;
+    {% for allowed_host in data.status_allowed_ip %}
+    {{allowed_host}} 0;
+    {% endfor %}
 }
