--- a/files/etc/nginx/fastcgi_fpm_symfony.conf
+++ b/files/etc/nginx/fastcgi_fpm_symfony.conf
@@ -1,12 +1,50 @@
 #-*- mode: nginx; mode: flyspell-prog; ispell-local-dictionary: "american" -*-
-### Not Chrooted fastcgi configuration.
-include fastcgi_fpm_drupal_params.conf;
+
+# build SCRIPT_FILENAME (SCRIPT_NAME) and PATH_INFO
+# for requests in the form /foo/index.php/titi/42
+# PATH_INFO is /titi/42
+fastcgi_split_path_info ^(.+\.php)(/.+)$;
+# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
+# Common
+fastcgi_param	QUERY_STRING		$query_string;
+fastcgi_param	REQUEST_METHOD		$request_method;
+fastcgi_param	CONTENT_TYPE		$content_type;
+fastcgi_param	CONTENT_LENGTH		$content_length;
+
+fastcgi_param	REQUEST_URI         $request_uri;
+fastcgi_param	DOCUMENT_URI		$document_uri;
+fastcgi_param	DOCUMENT_ROOT		$document_root;
+fastcgi_param	SERVER_PROTOCOL		$server_protocol;
+fastcgi_param   REQUEST_SCHEME     $scheme;
+fastcgi_param   HTTPS              $https if_not_empty;
+
+fastcgi_param	GATEWAY_INTERFACE	CGI/1.1;
+fastcgi_param	SERVER_SOFTWARE		nginx/$nginx_version;
+
+fastcgi_param	REMOTE_ADDR		$remote_addr;
+fastcgi_param	REMOTE_PORT		$remote_port;
+fastcgi_param	SERVER_ADDR		$server_addr;
+fastcgi_param	SERVER_PORT		$forwarded_server_port;
+#fastcgi_param	SERVER_NAME		$server_name;
+fastcgi_param	SERVER_NAME		$http_host;
+
+fastcgi_param	HTTPS			$fastcgi_ssl_toggle;
+
+# PHP only, required if PHP was built with --enable-force-cgi-redirect
+fastcgi_param	REDIRECT_STATUS		200;
+
+# Buffers
 fastcgi_buffers 256 8k;
 fastcgi_buffer_size 8k;
 fastcgi_intercept_errors on;
+
 ## allow 4 hrs - pass timeout responsibility to upstream.
 fastcgi_read_timeout 14400;
 fastcgi_send_timeout 60;
 fastcgi_index app.php;
+
 # should we ignore the request is aborted by the client?
 fastcgi_ignore_client_abort off;
