Nginx: moving sites-availble/sites-enabled to a system with sites-available/includes/conf.d

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -10,7 +10,8 @@ daemon off;
 # (Max clients = worker_connections * worker_processes)
 # "Max clients" is also limited by the number of socket connections available on the system (~64k)
 pid /var/run/nginx.pid;
-# FIXME: packaged modules?
+
+# First load packaged modules and extensions
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
@@ -178,8 +179,9 @@ http {
         1 443;
     }
 
+    # Enabled Virtualhosts are present in this directory (as zz_vhost_* symlinks) -- like a sites-enabled in fact--
+    # with also any specific conf (from distribution, for example)
     include {{data.basedir}}/conf.d/*.conf;
-    include {{data.basedir}}/sites-enabled/*;
 }
 
 
