more sensible lxc script names

--- a/files/etc/init/lxc-setup.conf
+++ b/files/etc/init/lxc-setup.conf
@@ -17,6 +17,6 @@ emits local-filesystems
 emits remote-filesystems
 task
 script
-exec /bin/sh -c "/usr/bin/ms-lxc-setup.sh upstart"
+exec /bin/sh -c "/usr/bin/lxc-setup.sh upstart"
 end script
 # vim: set filetype=upstart:
