--- a/files/etc/init/lxc-stop.conf
+++ b/files/etc/init/lxc-stop.conf
@@ -13,6 +13,6 @@ emits remote-filesystems
 task
 stop on runlevel [!$RUNLEVEL]
 script
-exec /bin/su -c "/usr/bin/ms-lxc-stop.sh upstart"
+exec /bin/su -c "/usr/bin/lxc-stop.sh upstart"
 end script
 # vim: set filetype=upstart:
