better handle redis reload

--- a/files/etc/systemd/system/redis-server.service.d/redis-server.conf
+++ b/files/etc/systemd/system/redis-server.service.d/redis-server.conf
@@ -2,11 +2,14 @@
 Type=simple
 #ExecStartPre=/bin/mkdir -p /var/run/redis
 #ExecStartPre=/bin/chown -R redis:redis /var/run/redis
-#ExecReload=/bin/kill -USR2 $MAINPID
+
 PIDFile=/var/run/redis/redis-server.pid
 
 ExecStart=
 ExecStart=/usr/bin/redis-server-wrapper.sh /etc/redis/redis.conf
+
+ExecReload=
+ExecReload=/bin/sh -c 'pid=$(cat /var/run/redis/redis-server.pid 2>/dev/null);if [ "x${pid}" != "x" ];then echo "Send reloading signal";/bin/kill -USR2 $pid;fi'
 # we drop privileges ourselves in wrapper
 User=root
 Group=root
