better handle redis reload

--- a/files/etc/systemd/system/redis-server.service.d/redis-server.conf
+++ b/files/etc/systemd/system/redis-server.service.d/redis-server.conf
@@ -4,12 +4,27 @@ Type=simple
 #ExecStartPre=/bin/chown -R redis:redis /var/run/redis
 
 PIDFile=/var/run/redis/redis-server.pid
+TimeoutStopSec=2
 
 ExecStart=
 ExecStart=/usr/bin/redis-server-wrapper.sh /etc/redis/redis.conf
 
+ExecStartPre=
+ExecStartPre=-/bin/run-parts --verbose /etc/redis/redis-server.pre-up.d
+
+ExecStartPost=-/bin/run-parts --verbose /etc/redis/redis-server.post-up.d
+ExecStartPost=
+
 ExecReload=
-ExecReload=/bin/sh -c 'pid=$(cat /var/run/redis/redis-server.pid 2>/dev/null);if [ "x${pid}" != "x" ];then echo "Send reloading signal";/bin/kill -USR2 $pid;fi'
+ExecReload=/bin/sh -c 'pid=$(cat /var/run/redis/redis-server.pid 2>/dev/null);if [ "x${pid}" != "x" ];then echo "Send reloading signal" >&2;/bin/kill -USR2 $pid;fi'
+
+ExecStop=
+ExecStop=-/bin/run-parts --verbose /etc/redis/redis-server.pre-down.d
+ExecStop=/bin/sh -c 'pid=$(cat /var/run/redis/redis-server.pid 2>/dev/null);if [ "x${pid}" != "x" ];then echo "Send reloading signal" >&2;/bin/kill -s TERM $pid;fi'
+
+ExecStopPost=
+ExecStopPost=-/bin/run-parts --verbose /etc/redis/redis-server.post-down.d
+
 # we drop privileges ourselves in wrapper
 User=root
 Group=root
