--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -1,5 +1,7 @@
 # MANAGED VIA SALT --  DO NOT EDIT
-{% set data = salt['mc_utils.json_load'](data) %}
+{%- set data = salt['mc_utils.json_load'](data) %}
+{%- set http2 = data.get('http2', False) %}
+{%- set shttp2 '' %}{% if http2 %}{% set shttp2='http2'%}{%endif%}
 include {{data.vhost_top_file}};
 
 {% if data.server_aliases and data.redirect_aliases %}
@@ -45,9 +47,9 @@ server {
     ssl_certificate_key {{data.ssl_key_path}};
 {% endif %}
     ssl on;
-    listen {{ data.ssl_port }} ssl;
+    listen {{ data.ssl_port }} ssl {{shttp2}};
     {% if data.v6 %}
-    listen [::]:{{data.ssl_port}} ipv6only=on ssl;
+    listen [::]:{{data.ssl_port}} ipv6only=on ssl {{shttp2}};
     {% endif %}
 
     server_name {{ h }};
@@ -125,9 +127,9 @@ server {
 {% endif %}
 
     ssl on;
-    listen {{ data.ssl_port }} ssl;
+    listen {{ data.ssl_port }} ssl {{shttp2}};
     {% if data.v6 %}
-    listen [::]:{{data.ssl_port}} ipv6only=on ssl;
+    listen [::]:{{data.ssl_port}} ipv6only=on ssl {{shttp2}};
     {% endif %}
     server_name {{ data.server_name }}{% if (False == data.redirect_aliases) and data.server_aliases %} {{ data.server_aliases|join(' ') }}{%endif%};
 
