--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -1,7 +1,10 @@
 # MANAGED VIA SALT --  DO NOT EDIT
 {%- set data = salt['mc_utils.json_load'](data) %}
 {%- set http2 = data.get('http2', False) %}
-{%- set shttp2 '' %}{% if http2 %}{% set shttp2=' http2'%}{%endif%}
+{%- set shttp2 = '' %}
+{%- if http2 %}
+{%-   set shttp2 = ' http2' %}
+{%- endif%}
 include {{data.vhost_top_file}};
 
 {% if data.server_aliases and data.redirect_aliases %}
