better handler test

--- a/ansible/roles/makinastates_lxc_create/handlers/main.yml
+++ b/ansible/roles/makinastates_lxc_create/handlers/main.yml
@@ -1,18 +1,17 @@
 ---
 # restart
-- listen: "LXC RestartContainer {{lxc_container_name}}"
-  tags: makinastates_lxc_create,makinastates_lxc_create_restart
+- listen: "LXC RestartContainer"
   shell: "{{lxc_path}}/{{lxc_container_name}}/manage.sh restart"
   tags: makinastates_lxc_create,makinastates_lxc_create_restart
 
 # register IP
 - name: get ip
-  listen: "LXC Registerip {{lxc_container_name}}"
+  listen: "LXC Registerip"
   shell: |
     lxc-attach -P {{lxc_path}} -n {{lxc_container_name}} -- ip addr show eth0|grep inet|grep -v :|awk '{print $2}'|sed "s|/.*||g"
   register: makinastates_lxc_create_ip
   tags: makinastates_lxc_create,makinastates_lxc_create_ip
 - name: show ip
-  listen: "LXC Registerip {{lxc_container_name}}"
+  listen: "LXC Registerip"
   debug: {msg: {eth0ip: "{{makinastates_lxc_create_ip}}"}}
   tags: makinastates_lxc_create,makinastates_lxc_create_ip
